integration with neo4j data fixed